--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
         }
         .split-top {
             top: 0;
-            clip-path: polygon(0 0, 100% 0, 100% 55%, 0 45%);
+            clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
             background: linear-gradient(135deg, #fce7f3 0%, #ffffff 100%);
         }
         .split-bottom {
             bottom: 0;
-            clip-path: polygon(0 45%, 100% 55%, 100% 100%, 0 100%);
-            
+            clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0 100%);
             background: linear-gradient(315deg, #fce7f3 0%, #ffffff 100%);
         }
         .split-active .split-top {
@@ -95,7 +94,7 @@
     <!-- Split Screen Animation -->
     <div id="splitContainer">
         <!-- Split Screens -->
-        <div class="split-screen split-bottom min-h-[50vh] flex items-center justify-center">
+        <div class="split-screen split-top min-h-[50vh] flex items-center justify-center">
 
             <!-- Kuromi Top Left & Right -->
             <img src="assets/kuromi-gif2.gif" alt="Kuromi" class="kuromi-decoration kuromi-top-left object-contain">
@@ -107,6 +106,7 @@
             </div>
         </div>
         <div class="split-screen split-bottom min-h-[50vh] flex items-center justify-center">
+
             <div class="welcome-text text-center">
                 <h1 class="font-playfair text-4xl font-bold text-gray-800 mb-2">Selamat Datang Sebrina</h1>
                 <p class="font-poppins text-pink-400">Ada Pesan Untukmu</p>
