--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
             <img src="assets/Kuromi-2.png" alt="Kuromi" class="kuromi-decoration kuromi-top-right object-contain">
             
             <div class="welcome-text text-center">
-                <h3 class="font-playfair text-4xl font-bold text-gray-800 mb-2">Selamat Datang Sebrina</h3>
+                <p class="font-playfair text-2xl font-bold text-gray-800 mb-2">Selamat Datang Sebrina</p>
                 <p class="font-poppins text-pink-400">Ada Pesan Untukmu</p>
             </div>
         </div>
         <div class="split-screen split-bottom flex items-center justify-center">
             <div class="welcome-text text-center">
-                <h3 class="font-playfair text-4xl font-bold text-gray-800 mb-2">Selamat Datang Sebrina</h3>
+                <p class="font-playfair text-2xl font-bold text-gray-800 mb-2">Selamat Datang Sebrina</p>
                 <p class="font-poppins text-pink-400">Ada Pesan Untukmu</p>
             </div>
             
