--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     Trio Habel Jonathan
                 </h1>
                 <p class="text-lg sm:text-xl text-gray-400 mb-8">
-                    Backend Developer & Software Engineering
+                    Backend Developer & Software Engineering Student
                 </p>
                 <div class="flex space-x-4 flex-wrap">
                     <a href="https://linkedin.com/in/trio-habel-jonathan-573b49352/" target="_blank"
@@ -246,7 +246,7 @@
             <div class="max-w-4xl mx-auto">
                 <div class="relative border-l border-white/20 pl-8 mb-12" data-aos="fade-up">
                     <div class="absolute w-4 h-4 bg-white rounded-full -left-2 top-0"></div>
-                    <h3 class="text-2xl font-bold mb-2">Software Engineering</h3>
+                    <h3 class="text-2xl font-bold mb-2">Software Engineering Intern</h3>
                     <p class="text-gray-400 mb-4">PT. Pundi Mas Berjaya | Nov 2024 - Present</p>
                     <ul class="space-y-3 text-gray-300">
                         <li class="flex items-start">
