--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
    
     <!-- Work Experience -->
-    <section id="work" class="py-32 bg-white/5">
+    <section id="work" class="py-32 bg-gray/5">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-16 gradient-text" data-aos="fade-up">Work Experience</h2>
             <div class="max-w-4xl mx-auto">
