--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             transition: width 0.3s ease;
         }
 
-        .nav-link:hover::after {
+        .nav-link:hover::after {    
             width: 100%;
         }
 
@@ -159,34 +159,38 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="py-32 relative">
-        <div class="container mx-auto px-6">
-            <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-bold mb-16 gradient-text" data-aos="fade-up">About Me</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
-                    <div data-aos="fade-right">
-                        <p class="text-lg text-gray-300 leading-relaxed">
-                            I'm a detail-oriented Software Engineering student passionate about creating efficient and scalable backend solutions. Currently focusing on Laravel and SQL, I bring hands-on experience in developing data-driven web applications.
-                        </p>
-                    </div>
-                    <div class="space-y-6" data-aos="fade-left">
-                        <div class="border border-white/10 p-6 rounded-lg bg-white/5 backdrop-blur-sm">
-                            <h3 class="text-xl font-semibold mb-4">Technical Skills</h3>
-                            <div class="flex flex-wrap gap-3">
-                                <span class="px-3 py-1 bg-white/10 rounded">Laravel</span>
-                                <span class="px-3 py-1 bg-white/10 rounded">PHP</span>
-                                <span class="px-3 py-1 bg-white/10 rounded">SQL</span>
-                                <span class="px-3 py-1 bg-white/10 rounded">Tailwind CSS</span>
-                                <span class="px-3 py-1 bg-white/10 rounded">Javascript</span>
-                            </div>
+   <!-- About Section -->
+<section id="about" class="py-32 relative">
+    <div class="container mx-auto px-6">
+        <div class="max-w-4xl mx-auto">
+            <h2 class="text-4xl font-bold mb-16 gradient-text" data-aos="fade-up">About Me</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+                <div data-aos="fade-right">
+                    <p class="text-lg text-gray-300 leading-relaxed">
+                        I'm a detail-oriented Software Engineering student passionate about creating efficient and scalable backend solutions. Currently focusing on Laravel and SQL, I bring hands-on experience in developing data-driven web applications.
+                    </p>
+                </div>
+                <div class="space-y-6" data-aos="fade-left">
+                    <div class="border border-white/10 p-6 rounded-lg bg-white/5 backdrop-blur-sm">
+                        <h3 class="text-xl font-semibold mb-4">Technical Skills</h3>
+                        <div class="flex flex-wrap gap-3">
+                            <span class="px-3 py-1 bg-white/10 rounded">Laravel</span>
+                            <span class="px-3 py-1 bg-white/10 rounded">PHP</span>
+                            <span class="px-3 py-1 bg-white/10 rounded">SQL</span>
+                            <span class="px-3 py-1 bg-white/10 rounded">Tailwind CSS</span>
+                            <span class="px-3 py-1 bg-white/10 rounded">Javascript</span>
                         </div>
+                    </div>
+                    <!-- Tambahan Web3 -->
+                    <div class="border border-white/10 p-6 rounded-lg bg-white/5 backdrop-blur-sm">
+                        <h3 class="text-xl font-semibold mb-4">Exploring Web3</h3>
+                        <p class="text-gray-300">Getting hands-on with decentralized systems—using DEX platforms like Uniswap and Solana-based exchanges to explore blockchain in action.</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
     <section id="projects" class="py-32 relative bg-white/5">
     <div class="container mx-auto px-6">
         <h2 class="text-4xl font-bold mb-16 gradient-text" data-aos="fade-up">Projects</h2>
@@ -239,8 +243,6 @@
                         </div>
                     </div>
 
-                   
-                   
                 </div>
 
                 <!-- Navigation Buttons -->
