--- a/index.html
+++ b/index.html
@@ -242,6 +242,36 @@
                             </div>
                         </div>
                     </div>
+<!-- Project 3: Solana Counter DApp -->
+<div class="w-full flex-shrink-0 px-4" data-aos="zoom-in-down">
+    <div class="flex flex-col sm:flex-row gap-8 items-center">
+        <div class="w-full sm:w-1/2">
+            <div class="rounded-lg h-[400px] flex items-center justify-center">
+                <img src="assets/counter.png" alt="Project 3" class="max-w-full max-h-full object-contain rounded-lg">
+            </div>
+        </div>
+        <div class="w-full sm:w-1/2 text-center sm:text-left">
+            <h3 class="text-2xl font-bold mb-4">Solana Counter DApp</h3>
+            <p class="text-gray-300 mb-6">A decentralized application built with React, TypeScript, and Anchor on the Solana blockchain. Features include wallet connection, counter initialization, and transactions (0.01 SOL per increment/decrement), with state stored on-chain.</p>
+            <div class="flex flex-wrap gap-3 justify-center sm:justify-start">
+                <span class="px-3 py-1 bg-white/10 rounded">React</span>
+                <span class="px-3 py-1 bg-white/10 rounded">TypeScript</span>
+                <span class="px-3 py-1 bg-white/10 rounded">Anchor</span>
+                <span class="px-3 py-1 bg-white/10 rounded">Solana</span>
+                <span class="px-3 py-1 bg-white/10 rounded">Tailwind CSS</span>
+                <span class="px-3 py-1 bg-white/10 rounded">NextJS</span>
+            </div>
+            <p class="text-gray-300 mt-4 flex gap-4 justify-center sm:justify-start">
+                <a href="https://kuzsolana.netlify.app/" target="_blank" class="px-4 py-2 bg-white text-black rounded-lg border border-gray-300 hover:bg-gray-100 transition-colors">
+                    Live Demo
+                </a> 
+                <a href="https://github.com/kuzuma/solana-counter" target="_blank" class="px-4 py-2 bg-white text-black rounded-lg border border-gray-300 hover:bg-gray-100 transition-colors">
+                    GitHub
+                </a>
+            </p>
+                </div>
+    </div>
+</div>
 
                 </div>
 
