--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
                 <div class="flex justify-center mt-8 gap-2" id="dots-container">
                     <button class="w-3 h-3 rounded-full bg-white/50 transition-all" data-index="0"></button>
                     <button class="w-3 h-3 rounded-full bg-white/20 transition-all" data-index="1"></button>
+                    <button class="w-3 h-3 rounded-full bg-white/20 transition-all" data-index="2"></button>
                    
                 </div>
             </div>
