--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                         <h3 class="text-xl font-semibold mb-4">Technical Skills</h3>
                         <div class="flex flex-wrap gap-3">
                             <span class="px-3 py-1 bg-white/10 rounded">Laravel</span>
+                            <span class="px-3 py-1 bg-white/10 rounded">NextJS</span>
                             <span class="px-3 py-1 bg-white/10 rounded">PHP</span>
                             <span class="px-3 py-1 bg-white/10 rounded">SQL</span>
                             <span class="px-3 py-1 bg-white/10 rounded">Tailwind CSS</span>
@@ -265,7 +266,7 @@
                 <a href="https://kuzsolana.netlify.app/" target="_blank" class="px-4 py-2 bg-white text-black rounded-lg border border-gray-300 hover:bg-gray-100 transition-colors">
                     Live Demo
                 </a> 
-                <a href="https://github.com/kuzuma/solana-counter" target="_blank" class="px-4 py-2 bg-white text-black rounded-lg border border-gray-300 hover:bg-gray-100 transition-colors">
+                <a href="https://github.com/trio-habel-jonathan/solana-counter" target="_blank" class="px-4 py-2 bg-white text-black rounded-lg border border-gray-300 hover:bg-gray-100 transition-colors">
                     GitHub
                 </a>
             </p>
